[gd_scene load_steps=8 format=3 uid="uid://civshdmxkibkj"]

[ext_resource type="PackedScene" uid="uid://mjfasvq6c18d" path="res://Nodes/Ball.tscn" id="1_41c0u"]
[ext_resource type="Script" path="res://Scripts/Debug.gd" id="1_yb2f0"]
[ext_resource type="PackedScene" uid="uid://2pucwjb3by2t" path="res://Nodes/Obstacle.tscn" id="2_lweux"]
[ext_resource type="PackedScene" uid="uid://dmobv4nr66fml" path="res://Nodes/Paddle.tscn" id="4_g2gd7"]
[ext_resource type="PackedScene" uid="uid://cty625ei6euq3" path="res://Nodes/Wall.tscn" id="5_42r4l"]
[ext_resource type="PackedScene" uid="uid://sglemheg4tg8" path="res://Nodes/Circle.tscn" id="6_5u6k2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cei2g"]
friction = 0.5
bounce = 0.44

[node name="Debug" type="Node2D"]
script = ExtResource("1_yb2f0")

[node name="Ball" parent="." instance=ExtResource("1_41c0u")]
position = Vector2(659, -676)

[node name="ObstacleY2" parent="." instance=ExtResource("2_lweux")]
position = Vector2(0, 325)
rotation = 0.610865

[node name="ObstacleY1" parent="." instance=ExtResource("2_lweux")]
position = Vector2(1146, 325)
rotation = -0.610865

[node name="ObstacleB1" parent="." instance=ExtResource("2_lweux")]
position = Vector2(561, -15)
rotation = 0.785398
scale = Vector2(0.5, 0.5)
color = 2

[node name="Paddle" parent="." instance=ExtResource("4_g2gd7")]
position = Vector2(315, 445)

[node name="Paddle2" parent="." instance=ExtResource("4_g2gd7")]
position = Vector2(730, 445)
side = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -300)
offset = Vector2(575, 325)
zoom = Vector2(0.4, 0.4)

[node name="Wall" parent="." instance=ExtResource("5_42r4l")]
position = Vector2(-24, -950)
scale = Vector2(1, 40)

[node name="Wall2" parent="." instance=ExtResource("5_42r4l")]
position = Vector2(1131, -950)
scale = Vector2(1, 40)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.684656, 0.407993, 0.976907, 1)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[node name="ObstacleR" parent="." instance=ExtResource("6_5u6k2")]
position = Vector2(550, -500)
scale = Vector2(0.33, 0.33)
physics_material_override = SubResource("PhysicsMaterial_cei2g")
color = 0

[node name="ObstacleR2" parent="." instance=ExtResource("6_5u6k2")]
position = Vector2(900, -500)
scale = Vector2(0.33, 0.33)
physics_material_override = SubResource("PhysicsMaterial_cei2g")
color = 0

[node name="ObstacleR3" parent="." instance=ExtResource("6_5u6k2")]
position = Vector2(200, -500)
scale = Vector2(0.33, 0.33)
physics_material_override = SubResource("PhysicsMaterial_cei2g")
color = 0

[node name="ObstacleR4" parent="." instance=ExtResource("6_5u6k2")]
position = Vector2(375, -300)
scale = Vector2(0.33, 0.33)
physics_material_override = SubResource("PhysicsMaterial_cei2g")
color = 0

[node name="ObstacleR5" parent="." instance=ExtResource("6_5u6k2")]
position = Vector2(750, -300)
scale = Vector2(0.33, 0.33)
physics_material_override = SubResource("PhysicsMaterial_cei2g")
color = 0
